tests/json/multipleTypeDefinition.satyh
type a = X
and  a = Y
